# agihouse

./: .env.example  .gitignore  AGENTS.md  IDEA.md  README.md  START.sh  action_runtime.py  actions.py  ambient.py  app.json  audio_pipeline.py  audit.py  calendar.json  contacts.json  context.py  demo.py  demo_curl.sh  demo_show.sh  event_extractor.py  idea  imessage_send.py  imessage_watcher.py  index.html  llm.py  memory_analyzer.py  obsidian_writer.py  output.py  package-lock.json  package.json  policy.yaml  proactive_assist.py  pyproject.toml  recall.py  tensor_recall.py  tl_recall.py  trigger_server.py  tsconfig.json  vad.py  voice_trigger.py
demo/: index.html
demos/: assistant_agent.py  assistant_calendar.py  assistant_ingest.py  assistant_ingest_calendar.py  assistant_query.py  assistant_resolve.py  assistant_seed.py
docs/: DEMO_RUNBOOK.md  even-realities-g2-notes.md  presence-build-requirements.md
g2-app/: .env.local.example  ambient-copilot.ehpk  app.json  index.html  package-lock.json  package.json
g2-app/src/: hud.ts  main.ts
g2-renderer/: .env.example  app.json  index.html  package-lock.json  package.json  vite.config.ts
g2-renderer/src/: main.ts  vite-env.d.ts
inbox/: CLAUDE.md  CONNECTOR_ROADMAP.md  DOCS_INDEX.md  MCP_SETUP.md  README.md  g2_agent.py  inbox_server.py  pyproject.toml  services.py  tools_registry.py
inbox/g2/: __init__.py  actions.py  arbitrator.py  audit.py  llm.py  (+9 more)
server/: index.ts
src/: main.ts  styles.css
tests/: test_action_runtime.py  test_event_extractor.py  test_imessage_send.py  test_trigger_server.py  test_vad.py
(+21 files in other folders)
