[project]
name = "agihouse"
version = "0.1.0"
description = "Ambient agent for Even Realities G2 — calendar nudges, message context, memory recall."
requires-python = ">=3.11"
dependencies = [
    # Core
    "anthropic>=0.40.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    # Trigger server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Audio path
    "silero-vad>=5.0",
    "torch>=2.2",
    "requests>=2.31",
    # Inbox runtime imports (Gmail/iMessage via services.py)
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
